# API_quiz

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: e22948790f08_initial_migration.py
api/app/: app.py  config.py  models.py  schemas.py  utils.py
api/app/api_v1/: deps.py  routers.py
api/app/api_v1/endpoints/: index.py  questions.py
api/db/: base.py  base_class.py  question_accessor.py
api1/: pyproject.toml
api1/alembic/: env.py
api1/app/: config.py  main.py  models.py  schemas.py
api1/app/api_v1/: deps.py
api1/app/api_v1/endpoints/: index.py  questions.py
api1/db/: __init__.py  base.py  question_accessor.py
api2/: pyproject.toml
api2/app/: main.py
