[tool.poetry]
name = "musicconvertor"
version = "0.1.0"
description = "Convert wav to mp3"
authors = ["Feraclin <feraclin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.13"
alembic = {extras = ["async"], version = "^1.11.0"}
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
